Update pgvector example

--- a/vector/postgres.ipynb
+++ b/vector/postgres.ipynb
@@ -1,18 +1,43 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Storing and querying for embeddings with PostGreSQL and pgvector\n",
+    "\n",
+    "With the help from the pgvector extension, you can leverage PostgreSQL as a vector database to store and query OpenAI embeddings. OpenAI embeddings are a type of data representation (in the shape of vectors, i.e., lists of numbers) used to measure the similarity of text strings for OpenAI’s models.\n",
+    "\n",
+    "The notebook perform following tasks:\n",
+    "\n",
+    "- Load structured data from a json file, create embeddings for content and title with OpenAI, the results are vectors of 1536 dimensions, and will be stored in pgvector\n",
+    "- Perform a vectorized search, finding the closest vectors to the query vector\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To start with, we need to run pgvector on docker, run the following command in your terminal:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_stdout = ! < /dev/urandom tr -dc 'A-Za-z0-9' | head -c12; echo\n",
+    "pg_password = cmd_stdout.n\n",
+    "\n",
+    "cmd_stdout = ! docker run -d --name pgvector -p 5432:5432 -e POSTGRES_PASSWORD={pg_password} -e POSTGRES_USER=pgadmin -e POSTGRES_DB=pgvector pgvector/pgvector:pg16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%pip install -q -U openai psycopg2-binary pgvector"
    ]
@@ -21,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "docker run -d --name pgvector -p 5432:5432 -e POSTGRES_PASSWORD=YOUR_PASSWORD -e POSTGRES_USER=pgadmin -e POSTGRES_DB=pgvector pgvector/pgvector:pg16"
+    "### Load environment variables and create an openai client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,31 +68,25 @@
     "    api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),  \n",
     "    api_version=os.getenv(\"OPENAI_API_VERSION\"),\n",
     "    azure_endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-    ")\n"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect to Postgres (PG)"
+    "### Connect to PostgreSQL\n",
+    "\n",
+    "Connect to our database using the popular psycopg2 python library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection pool created successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "conn_string = \"host={0} user={1} dbname={2} password={3} sslmode={4}\".format('127.0.0.1', 'pgadmin', 'pgvector', 'P@ssw0rd', 'disable')\n",
+    "conn_string = \"host={0} user={1} dbname={2} password={3} sslmode={4}\".format('127.0.0.1', 'pgadmin', 'pgvector', pg_password, 'disable')\n",
     "pg_pool = psycopg2.pool.SimpleConnectionPool(1, 20, conn_string)\n",
     "if (pg_pool):\n",
     "    print(\"Connection pool created successfully\")\n",
@@ -85,17 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extension already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    with connection.cursor() as cursor:\n",
@@ -128,18 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('plpgsql',)\n",
-      "('vector',)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the SHOW EXTENSIONS query\n",
     "show_extensions_query = \"select extname from pg_extension;\"\n",
@@ -159,8 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper function to create document embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,40 +228,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "df = pd.DataFrame(documents, columns=['id', 'title', 'content', 'category', 'titleVector', 'contentVector'])\n",
-    "data_list = [(int(row['id']), row['title'], row['content'], row['category'], np.array(row['titleVector']), np.array(row['contentVector'])) for index, row in df.iterrows()]\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the data and vectors to a table in the database\n",
+    "### Load the data and vectors to a table in the database\n",
     "In this section, we will load the data into a pandas dataframe, use select columns, and create vector embedding using azure open ai."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The table vs exists in the database.\n",
-      "You may drop previous table if you want to re-insert data.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame(documents, columns=['id', 'title', 'content', 'category', 'titleVector', 'contentVector'])\n",
+    "data_list = [(int(row['id']), row['title'], row['content'], row['category'], np.array(row['titleVector']), np.array(row['contentVector'])) for index, row in df.iterrows()]\n",
+    "\n",
     "# Register 'pgvector' type\n",
     "register_vector(connection)\n",
     "\n",
@@ -325,13 +319,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "User Asks a Question\n",
+    "### Asks a Question and retrieves the top K document chunks based on the users' question using the similarity.\n",
+    "\n",
     "In this step, the code will convert the user's question to an embedding and then retieve the top K document chunks based on the users' question using the similarity. Please note that other similarity metrics can also be used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,34 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1,\n",
-       "  'Azure App Service',\n",
-       "  'Azure App Service is a fully managed platform for building, deploying, and scaling web apps. You can host web apps, mobile app backends, and RESTful APIs. It supports a variety of programming languages and frameworks, such as .NET, Java, Node.js, Python, and PHP. The service offers built-in auto-scaling and load balancing capabilities. It also provides integration with other Azure services, such as Azure DevOps, GitHub, and Bitbucket.',\n",
-       "  'Web',\n",
-       "  0.4546572331058624),\n",
-       " (86,\n",
-       "  'Azure App Configuration',\n",
-       "  'Azure App Configuration is a fully managed configuration service that enables you to centrally manage and distribute your application settings and feature flags. It provides features like key-value storage, versioning, and access control. App Configuration supports various platforms, such as .NET, Java, Node.js, and Python. You can use Azure App Configuration to build and deploy your applications, ensure the consistency of your settings, and improve your application lifecycle. It also integrates with other Azure services, such as Azure App Service and Azure Functions.',\n",
-       "  'Developer Tools',\n",
-       "  0.5233237868954874),\n",
-       " (87,\n",
-       "  'Azure Static Web Apps',\n",
-       "  'Azure Static Web Apps is a serverless hosting service that enables you to build and deploy modern web applications using static front-end technologies and serverless APIs. It provides features like custom domains, SSL certificates, and integration with Azure Functions. Static Web Apps supports various frameworks, such as React, Angular, and Vue.js. You can use Azure Static Web Apps to build and deploy your web applications, ensure high performance and security, and simplify your development workflow. It also integrates with other Azure services, such as Azure App Service and Azure CDN.',\n",
-       "  'Web',\n",
-       "  0.5233960206407106)]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results"
    ]
