Add document intelligence example

--- a/langchain/pdf_to_json.ipynb
+++ b/langchain/pdf_to_json.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Azure Document Intelligence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain_community.document_loaders import AzureAIDocumentIntelligenceLoader\n",
+    "from IPython.display import Markdown\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "doc_intelligence_endpoint = os.getenv(\"AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT\")\n",
+    "doc_intelligence_key = os.getenv(\"AZURE_DOCUMENT_INTELLIGENCE_KEY\")\n",
+    "loader = AzureAIDocumentIntelligenceLoader(file_path=\"../data/Wine-PO.pdf\", api_key = doc_intelligence_key, api_endpoint = doc_intelligence_endpoint, api_model=\"prebuilt-layout\")\n",
+    "docs = loader.load()\n",
+    "Markdown(docs[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Azure OpenAI Vision"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
