--- a/crewai/azure_model.ipynb
+++ b/crewai/azure_model.ipynb
@@ -2,104 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-07 15:05:51,487 - 139850290233472 - __init__.py-__init__:538 - WARNING: Overriding of current TracerProvider is not allowed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mSenior Researcher\u001b[00m\n",
-      "\u001b[95m## Task:\u001b[00m \u001b[92mIdentify the next big trend in AI\u001b[00m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mSenior Researcher\u001b[00m\n",
-      "\u001b[95m## Thought:\u001b[00m \u001b[92mI need to gather the current date to ensure the research report is relevant and timely before identifying the next big trend in AI.\u001b[00m\n",
-      "\u001b[95m## Using tool:\u001b[00m \u001b[92mGet current date\u001b[00m\n",
-      "\u001b[95m## Tool Input:\u001b[00m \u001b[92m\n",
-      "\"{}\"\u001b[00m\n",
-      "\u001b[95m## Tool Output:\u001b[00m \u001b[92m\n",
-      "2024-11-07\u001b[00m\n",
-      "\n",
-      "\n",
-      "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mSenior Researcher\u001b[00m\n",
-      "\u001b[95m## Final Answer:\u001b[00m \u001b[92m\n",
-      "```markdown\n",
-      "# Research Report: The Next Big Trend in AI (As of November 7, 2024)\n",
-      "\n",
-      "## Introduction\n",
-      "Artificial Intelligence (AI) is evolving at an unprecedented pace, influencing various sectors worldwide. As we look toward the future, several trends are emerging that promise to reshape industries, enhance efficiency, and unlock new capabilities. This report identifies and analyzes the next big trend in AI.\n",
-      "\n",
-      "## The Next Big Trend: Explainable AI (XAI)\n",
-      "\n",
-      "### Overview\n",
-      "Explainable AI (XAI) refers to methods and techniques in AI that render the workings of AI systems understandable to humans. As AI systems become increasingly complex, the demand for transparency and interpretability has surged, driven by ethical considerations, regulatory requirements, and the necessity for trust in AI systems.\n",
-      "\n",
-      "### Key Drivers of the Trend\n",
-      "1. **Regulatory Pressure**: Governments worldwide are implementing regulations that require companies to ensure their AI systems are transparent and accountable.\n",
-      "2. **Ethical Considerations**: There is a growing recognition of the ethical implications of AI. Stakeholders demand clarity on how AI-driven decisions are made, particularly in critical areas like healthcare, law enforcement, and finance.\n",
-      "3. **Consumer Trust**: As users become more aware of AI's capabilities and limitations, organizations must provide explanations for AI decisions to build and maintain trust.\n",
-      "\n",
-      "### Technologies Enabling Explainability\n",
-      "- **Interpretable Models**: Simple models that inherently provide insight into their decision-making process, such as decision trees or linear regression.\n",
-      "- **Post-hoc Explanation Techniques**: Techniques that analyze complex models after they are trained to offer insights, like LIME (Local Interpretable Model-agnostic Explanations) and SHAP (SHapley Additive exPlanations).\n",
-      "- **Visualization Tools**: Tools that help visualize AI decision processes, making them more understandable to users.\n",
-      "\n",
-      "### Case Studies\n",
-      "1. **Healthcare**: Hospitals implementing AI systems for diagnosing diseases are leveraging XAI to help doctors understand AI recommendations, thereby improving patient trust and treatment efficacy.\n",
-      "2. **Finance**: Financial institutions are required to provide justifications for lending decisions, prompting the implementation of explainable AI to comply with regulations.\n",
-      "\n",
-      "### Challenges Ahead\n",
-      "While the trend towards explainable AI is promising, several challenges remain:\n",
-      "- **Complexity vs. Interpretability**: Balancing the complexity of AI models with the need for interpretability.\n",
-      "- **Standardization**: Developing universal standards for explainability that can be adopted across different industries.\n",
-      "- **Scalability**: Ensuring that explainable AI techniques can be scaled to meet the demands of large, complex systems.\n",
-      "\n",
-      "### Conclusion\n",
-      "As we move further into the 2020s, explainable AI is set to become a cornerstone of responsible AI deployment. Organizations that prioritize transparency will not only comply with emerging regulations but also harness the benefits of trust and understanding in their AI systems. The convergence of technology, ethics, and regulation suggests that explainable AI will shape the future landscape of artificial intelligence.\n",
-      "\n",
-      "## References\n",
-      "- Doshi-Velez, F., & Kim, P. (2017). Towards a rigorous science of interpretable machine learning.\n",
-      "- Gilpin, L. H., et al. (2018). Explaining explanations: An overview of interpretability of machine learning.\n",
-      "- European Commission. (2021). White Paper on Artificial Intelligence: A European approach to excellence and trust.\n",
-      "\n",
-      "```\u001b[00m\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CrewOutput(raw=\"```markdown\\n# Research Report: The Next Big Trend in AI (As of November 7, 2024)\\n\\n## Introduction\\nArtificial Intelligence (AI) is evolving at an unprecedented pace, influencing various sectors worldwide. As we look toward the future, several trends are emerging that promise to reshape industries, enhance efficiency, and unlock new capabilities. This report identifies and analyzes the next big trend in AI.\\n\\n## The Next Big Trend: Explainable AI (XAI)\\n\\n### Overview\\nExplainable AI (XAI) refers to methods and techniques in AI that render the workings of AI systems understandable to humans. As AI systems become increasingly complex, the demand for transparency and interpretability has surged, driven by ethical considerations, regulatory requirements, and the necessity for trust in AI systems.\\n\\n### Key Drivers of the Trend\\n1. **Regulatory Pressure**: Governments worldwide are implementing regulations that require companies to ensure their AI systems are transparent and accountable.\\n2. **Ethical Considerations**: There is a growing recognition of the ethical implications of AI. Stakeholders demand clarity on how AI-driven decisions are made, particularly in critical areas like healthcare, law enforcement, and finance.\\n3. **Consumer Trust**: As users become more aware of AI's capabilities and limitations, organizations must provide explanations for AI decisions to build and maintain trust.\\n\\n### Technologies Enabling Explainability\\n- **Interpretable Models**: Simple models that inherently provide insight into their decision-making process, such as decision trees or linear regression.\\n- **Post-hoc Explanation Techniques**: Techniques that analyze complex models after they are trained to offer insights, like LIME (Local Interpretable Model-agnostic Explanations) and SHAP (SHapley Additive exPlanations).\\n- **Visualization Tools**: Tools that help visualize AI decision processes, making them more understandable to users.\\n\\n### Case Studies\\n1. **Healthcare**: Hospitals implementing AI systems for diagnosing diseases are leveraging XAI to help doctors understand AI recommendations, thereby improving patient trust and treatment efficacy.\\n2. **Finance**: Financial institutions are required to provide justifications for lending decisions, prompting the implementation of explainable AI to comply with regulations.\\n\\n### Challenges Ahead\\nWhile the trend towards explainable AI is promising, several challenges remain:\\n- **Complexity vs. Interpretability**: Balancing the complexity of AI models with the need for interpretability.\\n- **Standardization**: Developing universal standards for explainability that can be adopted across different industries.\\n- **Scalability**: Ensuring that explainable AI techniques can be scaled to meet the demands of large, complex systems.\\n\\n### Conclusion\\nAs we move further into the 2020s, explainable AI is set to become a cornerstone of responsible AI deployment. Organizations that prioritize transparency will not only comply with emerging regulations but also harness the benefits of trust and understanding in their AI systems. The convergence of technology, ethics, and regulation suggests that explainable AI will shape the future landscape of artificial intelligence.\\n\\n## References\\n- Doshi-Velez, F., & Kim, P. (2017). Towards a rigorous science of interpretable machine learning.\\n- Gilpin, L. H., et al. (2018). Explaining explanations: An overview of interpretability of machine learning.\\n- European Commission. (2021). White Paper on Artificial Intelligence: A European approach to excellence and trust.\\n\\n```\", pydantic=None, json_dict=None, tasks_output=[TaskOutput(description='Identify the next big trend in AI', name=None, expected_output='A research report in markdown format', summary='Identify the next big trend in AI...', raw=\"```markdown\\n# Research Report: The Next Big Trend in AI (As of November 7, 2024)\\n\\n## Introduction\\nArtificial Intelligence (AI) is evolving at an unprecedented pace, influencing various sectors worldwide. As we look toward the future, several trends are emerging that promise to reshape industries, enhance efficiency, and unlock new capabilities. This report identifies and analyzes the next big trend in AI.\\n\\n## The Next Big Trend: Explainable AI (XAI)\\n\\n### Overview\\nExplainable AI (XAI) refers to methods and techniques in AI that render the workings of AI systems understandable to humans. As AI systems become increasingly complex, the demand for transparency and interpretability has surged, driven by ethical considerations, regulatory requirements, and the necessity for trust in AI systems.\\n\\n### Key Drivers of the Trend\\n1. **Regulatory Pressure**: Governments worldwide are implementing regulations that require companies to ensure their AI systems are transparent and accountable.\\n2. **Ethical Considerations**: There is a growing recognition of the ethical implications of AI. Stakeholders demand clarity on how AI-driven decisions are made, particularly in critical areas like healthcare, law enforcement, and finance.\\n3. **Consumer Trust**: As users become more aware of AI's capabilities and limitations, organizations must provide explanations for AI decisions to build and maintain trust.\\n\\n### Technologies Enabling Explainability\\n- **Interpretable Models**: Simple models that inherently provide insight into their decision-making process, such as decision trees or linear regression.\\n- **Post-hoc Explanation Techniques**: Techniques that analyze complex models after they are trained to offer insights, like LIME (Local Interpretable Model-agnostic Explanations) and SHAP (SHapley Additive exPlanations).\\n- **Visualization Tools**: Tools that help visualize AI decision processes, making them more understandable to users.\\n\\n### Case Studies\\n1. **Healthcare**: Hospitals implementing AI systems for diagnosing diseases are leveraging XAI to help doctors understand AI recommendations, thereby improving patient trust and treatment efficacy.\\n2. **Finance**: Financial institutions are required to provide justifications for lending decisions, prompting the implementation of explainable AI to comply with regulations.\\n\\n### Challenges Ahead\\nWhile the trend towards explainable AI is promising, several challenges remain:\\n- **Complexity vs. Interpretability**: Balancing the complexity of AI models with the need for interpretability.\\n- **Standardization**: Developing universal standards for explainability that can be adopted across different industries.\\n- **Scalability**: Ensuring that explainable AI techniques can be scaled to meet the demands of large, complex systems.\\n\\n### Conclusion\\nAs we move further into the 2020s, explainable AI is set to become a cornerstone of responsible AI deployment. Organizations that prioritize transparency will not only comply with emerging regulations but also harness the benefits of trust and understanding in their AI systems. The convergence of technology, ethics, and regulation suggests that explainable AI will shape the future landscape of artificial intelligence.\\n\\n## References\\n- Doshi-Velez, F., & Kim, P. (2017). Towards a rigorous science of interpretable machine learning.\\n- Gilpin, L. H., et al. (2018). Explaining explanations: An overview of interpretability of machine learning.\\n- European Commission. (2021). White Paper on Artificial Intelligence: A European approach to excellence and trust.\\n\\n```\", pydantic=None, json_dict=None, agent='Senior Researcher', output_format=<OutputFormat.RAW: 'raw'>)], token_usage=UsageMetrics(total_tokens=1354, prompt_tokens=592, completion_tokens=762, successful_requests=2))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "import os\n",
+    "\n",
+    "from langtrace_python_sdk import langtrace # Must precede any llm module imports\n",
+    "langtrace.init(\n",
+    "    api_key = os.getenv(\"LANGTRACE_API_KEY\"),\n",
+    "    api_host = os.getenv(\"LANGTRACE_API_HOST\"),\n",
+    "    # write_spans_to_console = True\n",
+    ")\n",
+    "\n",
     "from crewai import Agent, Task, LLM, Crew, Process\n",
+    "\n",
     "from crewai_tools import tool\n",
     "from datetime import datetime\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
     "\n",
     "@tool(\"Get current date\")\n",
     "def get_current_date() -> str:\n",
@@ -108,10 +29,10 @@
     "\n",
     "\n",
     "llm = LLM(\n",
-    "    api_key = os.getenv(\"AZURE_OPENAI_KEY\"),\n",
-    "    api_version = os.getenv(\"AZURE_OPENAI_VERSION\"),\n",
-    "    base_url = os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
-    "    model = 'gpt-4o-mini',\n",
+    "    api_key = os.getenv(\"AZURE_API_KEY\"),\n",
+    "    api_version = os.getenv(\"AZURE_API_VERSION\"),\n",
+    "    base_url = os.getenv(\"AZURE_API_BASE\"),\n",
+    "    model = 'azure/gpt-4o-mini',\n",
     "    azure=True\n",
     ")\n",
     "\n",
@@ -128,7 +49,7 @@
     "# Task for the researcher\n",
     "research_task = Task(\n",
     "  description='Identify the next big trend in AI',\n",
-    "  expected_output='A research report in markdown format',\n",
+    "  expected_output='A research report',\n",
     "  agent=researcher  # Assigning the task to the researcher\n",
     ")\n",
     "\n",
@@ -141,7 +62,72 @@
     ")\n",
     "\n",
     "# Begin the task execution\n",
-    "tech_crew.kickoff()"
+    "output = tech_crew.kickoff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Research Report on the Next Big Trend in AI: November 2024**\n",
+       "\n",
+       "**Title: The Rise of Generative AI and its Applications**\n",
+       "\n",
+       "**Executive Summary:**\n",
+       "As of November 2024, generative AI has emerged as one of the most disruptive and promising trends in the artificial intelligence landscape. This report explores the advancements, implications, and future potential of generative AI technologies.\n",
+       "\n",
+       "**1. Introduction**\n",
+       "Generative AI refers to algorithms that can generate new content, from text and images to music and video, based on the data they have been trained on. The rapid advancements in deep learning and neural networks have propelled this technology into various sectors, revolutionizing traditional processes and creating new business models.\n",
+       "\n",
+       "**2. Current Landscape of Generative AI**\n",
+       "Generative AI models, such as GPT-4, DALL-E, and generative adversarial networks (GANs), have made significant strides. Their capabilities now extend beyond simple content generation to more sophisticated applications, including:\n",
+       "- Content creation in marketing and advertising\n",
+       "- Virtual reality environments in gaming\n",
+       "- Personalized educational content\n",
+       "- Assistive technologies for those with disabilities\n",
+       "\n",
+       "**3. Key Technologies Driving Generative AI**\n",
+       "Several core technologies are propelling generative AI forward:\n",
+       "- **Transformers:** Revolutionized natural language processing and understanding through self-attention mechanisms, allowing models to comprehend context and nuances better.\n",
+       "- **Large Language Models (LLMs):** Their ability to generate human-like text has opened avenues for virtual assistants and AI-driven customer service solutions.\n",
+       "- **Diffusion Models:** These have significantly improved image-generation quality, leading to successful applications in creative fields and beyond.\n",
+       "\n",
+       "**4. Societal Implications**\n",
+       "The proliferation of generative AI raises ethical considerations, including:\n",
+       "- Intellectual property rights concerning AI-generated content.\n",
+       "- Misinformation and deepfakes, with potential impacts on trust in media.\n",
+       "- Job displacement in creative industries versus the creation of new roles.\n",
+       "\n",
+       "**5. Future Trends and Predictions**\n",
+       "Looking ahead, several trends are expected to shape the generative AI landscape:\n",
+       "- **Customization:** Tailoring AI models to individual user preferences for personalized experiences.\n",
+       "- **Collaboration with Humans:** Enhancing creativity by combining human and AI efforts, leading to novel works in arts and sciences.\n",
+       "- **Regulation and Ethical Frameworks:** As generative AI becomes more ingrained in society, regulations addressing its ethical use will become crucial.\n",
+       "\n",
+       "**6. Conclusion**\n",
+       "Generative AI represents a significant milestone in the evolution of artificial intelligence, with the potential to transform numerous industries. As we continue to explore its capabilities and address its challenges, the importance of responsible and innovative development will be paramount. Organizations must remain agile, adapting to the rapid changes generative AI brings to ensure they leverage its potential effectively while safeguarding ethical standards.\n",
+       "\n",
+       "**7. References**\n",
+       "- \"Understanding Generative AI\" by AI Research Institute, 2024.\n",
+       "- \"The Future of Work: Adapting to AI\" by Tech Innovations Journal, 2024.\n",
+       "\n",
+       "**End of Report**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "display(Markdown(output.raw))"
    ]
   }
  ],
