--- a/langgraph/quickstart.ipynb
+++ b/langgraph/quickstart.ipynb
@@ -15,7 +15,7 @@
    "id": "c0860511-03c2-49bb-937b-035f84142b7e",
    "metadata": {},
    "source": [
-    "## Setup¶\n",
+    "## Setup\n",
     "First we need to install the packages required"
    ]
   },
