--- a/crewai/trip_planner.ipynb
+++ b/crewai/trip_planner.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,10 @@
     "from textwrap import dedent\n",
     "\n",
     "llm = LLM(\n",
-    "    api_key = os.getenv(\"AZURE_OPENAI_KEY\"),\n",
-    "    api_version = os.getenv(\"AZURE_OPENAI_VERSION\"),\n",
-    "    base_url = os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
-    "    model = 'gpt-4o-mini',\n",
+    "    api_key = os.getenv(\"AZURE_API_KEY\"),\n",
+    "    api_version = os.getenv(\"AZURE_API_VERSION\"),\n",
+    "    base_url = os.getenv(\"AZURE_API_BASE\"),\n",
+    "    model = 'azure/gpt-4o-mini',\n",
     "    azure=True\n",
     ")"
    ]
